--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,25 @@ a{
     padding-left: 5%;
     padding-right: 5%;
 }
-
+.btn-main{
+    align-items: center;
+    background-color: #212EA0;
+    color: #FFF;
+    padding: 14px 25px;
+    font-size: 16px;
+    border-radius: 3px;
+    cursor: pointer;
+    border: 0;
+    outline: 0;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+.button-container {
+    display: flex;
+    justify-content: center;
+  }
+  
 .btn{
     background-color: #FFF;
     color: #212121;
